Navbar tabs spacing fix

--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -11,12 +11,15 @@
 
 .navbar.scrolled {
   z-index: 40;
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(1px);
 }
 
-.nav-links {
+.nav-tabs-container {
   display: flex;
-  gap: 2rem;
+  min-width: fit-content;
+  width: 40%;
+  gap:50px;
+  justify-content: space-between;
   font-size: 1.5rem;
 }
 
@@ -24,6 +27,10 @@
   font-size: 1.5rem;
 }
 
+.nav-tabs {
+  display: flex;
+  gap: 20px;
+}
 .nav-item:hover {
   color: var(--main-color);
   text-decoration: underline;
@@ -78,14 +85,16 @@
     transform: rotate(-45deg) translate(0.5px, -12px); /* Rotate and translate the second line */
   }
 
-  .nav-links {
-    display: none; 
-    padding:20px 0px ;
-    
+  .nav-tabs-container {
+    display: none;
+    padding: 20px 0px;
+  }
+  .nav-tabs {
+    flex-direction: column;
   }
 
-  .nav-item{
-    padding:0px 20px ;
+  .nav-item {
+    padding: 0px 20px;
   }
 
   .nav-toggled {
@@ -97,7 +106,7 @@
     color: var(--main-text-color);
     width: 100vw;
     background-color: var(--main-background-color);
-    
+
     animation: navFadeIn 0.2s linear forwards; /* Fade in animation */
 
     font-size: 1.5rem;
@@ -118,9 +127,7 @@
 
   .navbar-group {
     border-top: 1px solid var(--main-text-color);
-    padding:20px 20px 0px 20px;
+    padding: 20px 20px 0px 20px;
     justify-content: space-between;
   }
-
-  
 }
